--- a/style.css
+++ b/style.css
@@ -703,7 +703,7 @@ footer .footer__top ul li:first-child {
 footer .footer__top ul li:not(:first-child, :last-child) {
   margin-bottom: 10px;
 }
-footer .footer__top ul li a, footer .footer__top__contact li:not(li.form) {
+footer .footer__top ul li a:not(.social li a), footer .footer__top__contact li:not(li.form) {
   position: relative;
   color: #1A0A03;
   font-size: 16px;
@@ -719,7 +719,7 @@ footer .footer__top ul li a::after {
   background-color: #EE5514;
   transition: 0.2s linear;
 }
-footer .footer__top ul li a:hover:after {
+footer .footer__top ul li a:not(a[title^="link to"]):hover:after {
   width: 100%;
 }
 footer .footer__top__contact form input {
